--- a/src/components/FormsContainer/styling.css
+++ b/src/components/FormsContainer/styling.css
@@ -1,18 +1,17 @@
 .form-container-main {
   height: 100%;
 }
-.forms-container-canvus {
+.forms-container-canvas {
   position: relative;
   height: 100%;
   background-image: url('../../assets/checker-box.png');
   background-repeat: repeat;
 }
 
-.forms-container-canvus-controls {
+.forms-container-canvas-controls {
   position: absolute;
-  top: 5px;
-  left: 5px;
   background-color: white;
   padding: 5px;
   padding-left: 20px;
+  z-index: 12;
 }
