--- a/src/components/Header/styling.css
+++ b/src/components/Header/styling.css
@@ -1,10 +1,15 @@
 .header-branding {
   height: 35px;
-  background-color: #009c95;
+  background-color: #0d2b45;
   color: white;
   align-content: center;
   font-size: 13px;
   font-weight: 400;
+}
+
+.header-logo {
+  padding-top: 3px;
+  padding-left: 10px;
 }
 
 .header-container {
